# nand2tetris-python

./: Makefile  README.md  nand2tetris.ipynb  pyproject.toml
jupyter/: nand2tetris.ipynb
src/: main.py
src/nand2tetris/: __init__.py  adder.py  logic_gate.py
src/nand2tetris/assembler/: Max.asm  code.py  main.py  parser.py  symbol_table.py
src/nand2tetris/virtualmachine/: code_writer.py  main.py  parser.py
